codepkg/objects/Funding_Source__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Please link each funding source to the corresponding account. This will ensure Paying entities to have their own community and approve invoices</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funding Sources</relationshipLabel>
        <relationshipName>Funding_Sources</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicable_for_App__c</fullName>
        <label>Applicable for App</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PHOS</fullName>
                </value>
                <value>
                    <fullName>HMA</fullName>
                </value>
                <value>
                    <fullName>MARS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Funding Source</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Applicable_for_App__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>